Replace NamedRoute with regular Route