@@ -23,6 +23,8 @@ import org.opensearch.client.Response;
 import org.opensearch.client.ResponseException;
 import org.opensearch.securityanalytics.SecurityAnalyticsPlugin;
 import org.opensearch.securityanalytics.SecurityAnalyticsRestTestCase;
+import org.opensearch.test.OpenSearchTestCase;
+import org.opensearch.test.rest.OpenSearchRestTestCase;
 
 import java.io.IOException;
 import java.util.Collections;
@@ -46,8 +48,8 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
 
     /** Update a single finding with all case fields. Expects HTTP 200 and result "updated". */
     public void testUpdateSingleFinding_allCaseFields() throws IOException {
-        String index = createFindingsIndex();
-        String docId = indexFindingDoc(index);
+        String index = this.createFindingsIndex();
+        String docId = this.indexFindingDoc(index);
 
         String body =
                 "{"
@@ -69,20 +71,20 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
                         + "}]"
                         + "}";
 
-        Response response = makePutRequest(body);
+        Response response = this.makePutRequest(body);
         assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
 
-        Map<String, Object> responseBody = entityAsMap(response);
+        Map<String, Object> responseBody = OpenSearchRestTestCase.entityAsMap(response);
         assertFalse((Boolean) responseBody.get("errors"));
 
         @SuppressWarnings("unchecked")
         List<Map<String, Object>> items = (List<Map<String, Object>>) responseBody.get("items");
         assertEquals(1, items.size());
-        assertEquals(docId, items.get(0).get("_id"));
-        assertEquals("updated", items.get(0).get("result"));
+        assertEquals(docId, items.getFirst().get("_id"));
+        assertEquals("updated", items.getFirst().get("result"));
 
         // Verify the document was actually updated
-        Map<String, Object> source = getDocSource(index, docId);
+        Map<String, Object> source = this.getDocSource(index, docId);
         @SuppressWarnings("unchecked")
         Map<String, Object> wazuh = (Map<String, Object>) source.get("wazuh");
         assertNotNull("wazuh field should exist", wazuh);
@@ -96,8 +98,8 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
 
     /** Update only the status field — partial case update. */
     public void testUpdateSingleFinding_partialCaseUpdate() throws IOException {
-        String index = createFindingsIndex();
-        String docId = indexFindingDoc(index);
+        String index = this.createFindingsIndex();
+        String docId = this.indexFindingDoc(index);
 
         String body =
                 "{"
@@ -112,10 +114,10 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
                         + "}]"
                         + "}";
 
-        Response response = makePutRequest(body);
+        Response response = this.makePutRequest(body);
         assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
 
-        Map<String, Object> source = getDocSource(index, docId);
+        Map<String, Object> source = this.getDocSource(index, docId);
         @SuppressWarnings("unchecked")
         Map<String, Object> caseObj =
                 (Map<String, Object>) ((Map<String, Object>) source.get("wazuh")).get("case");
@@ -124,9 +126,9 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
 
     /** Bulk update of multiple findings in a single request. */
     public void testUpdateMultipleFindings() throws IOException {
-        String index = createFindingsIndex();
-        String docId1 = indexFindingDoc(index);
-        String docId2 = indexFindingDoc(index);
+        String index = this.createFindingsIndex();
+        String docId1 = this.indexFindingDoc(index);
+        String docId2 = this.indexFindingDoc(index);
 
         String body =
                 "{"
@@ -144,10 +146,10 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
                         + "]"
                         + "}";
 
-        Response response = makePutRequest(body);
+        Response response = this.makePutRequest(body);
         assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
 
-        Map<String, Object> responseBody = entityAsMap(response);
+        Map<String, Object> responseBody = OpenSearchRestTestCase.entityAsMap(response);
         assertFalse((Boolean) responseBody.get("errors"));
 
         @SuppressWarnings("unchecked")
@@ -157,8 +159,8 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
 
     /** Updating a finding that already has case fields should merge/overwrite them. */
     public void testUpdateFinding_overwriteExistingCaseFields() throws IOException {
-        String index = createFindingsIndex();
-        String docId = indexFindingDoc(index);
+        String index = this.createFindingsIndex();
+        String docId = this.indexFindingDoc(index);
 
         // First update — set status to ACTIVE
         String body1 =
@@ -173,7 +175,7 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
                         + "  \"case\": { \"status\": \"ACTIVE\", \"comment\": \"Initial triage\" }"
                         + "}]"
                         + "}";
-        makePutRequest(body1);
+        this.makePutRequest(body1);
 
         // Second update — overwrite status, add user
         String body2 =
@@ -188,10 +190,10 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
                         + "  \"case\": { \"status\": \"COMPLETED\", \"user\": { \"name\": \"admin\" } }"
                         + "}]"
                         + "}";
-        Response response = makePutRequest(body2);
+        Response response = this.makePutRequest(body2);
         assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
 
-        Map<String, Object> source = getDocSource(index, docId);
+        Map<String, Object> source = this.getDocSource(index, docId);
         @SuppressWarnings("unchecked")
         Map<String, Object> caseObj =
                 (Map<String, Object>) ((Map<String, Object>) source.get("wazuh")).get("case");
@@ -206,7 +208,7 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
     /** Empty findings array should return 400. */
     public void testUpdateFindings_emptyArray() throws IOException {
         try {
-            makePutRequest("{\"findings\": []}");
+            this.makePutRequest("{\"findings\": []}");
             fail("Expected 400 for empty findings array");
         } catch (ResponseException e) {
             assertEquals(HttpStatus.SC_BAD_REQUEST, e.getResponse().getStatusLine().getStatusCode());
@@ -216,7 +218,7 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
     /** Missing findings field should return 400. */
     public void testUpdateFindings_missingFindingsField() throws IOException {
         try {
-            makePutRequest("{\"other\": \"value\"}");
+            this.makePutRequest("{\"other\": \"value\"}");
             fail("Expected 400 for missing findings field");
         } catch (ResponseException e) {
             assertEquals(HttpStatus.SC_BAD_REQUEST, e.getResponse().getStatusLine().getStatusCode());
@@ -226,7 +228,7 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
     /** Missing _id in a finding element should return 400. */
     public void testUpdateFindings_missingId() throws IOException {
         try {
-            makePutRequest(
+            this.makePutRequest(
                     "{\"findings\": [{\"_index\": \"test\", \"case\": {\"status\": \"ACTIVE\"}}]}");
             fail("Expected 400 for missing _id");
         } catch (ResponseException e) {
@@ -237,7 +239,8 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
     /** Missing _index in a finding element should return 400. */
     public void testUpdateFindings_missingIndex() throws IOException {
         try {
-            makePutRequest("{\"findings\": [{\"_id\": \"123\", \"case\": {\"status\": \"ACTIVE\"}}]}");
+            this.makePutRequest(
+                    "{\"findings\": [{\"_id\": \"123\", \"case\": {\"status\": \"ACTIVE\"}}]}");
             fail("Expected 400 for missing _index");
         } catch (ResponseException e) {
             assertEquals(HttpStatus.SC_BAD_REQUEST, e.getResponse().getStatusLine().getStatusCode());
@@ -247,7 +250,7 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
     /** Missing case object in a finding element should return 400. */
     public void testUpdateFindings_missingCaseObject() throws IOException {
         try {
-            makePutRequest("{\"findings\": [{\"_id\": \"123\", \"_index\": \"test\"}]}");
+            this.makePutRequest("{\"findings\": [{\"_id\": \"123\", \"_index\": \"test\"}]}");
             fail("Expected 400 for missing case object");
         } catch (ResponseException e) {
             assertEquals(HttpStatus.SC_BAD_REQUEST, e.getResponse().getStatusLine().getStatusCode());
@@ -257,7 +260,7 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
     /** Invalid JSON body should return 400. */
     public void testUpdateFindings_invalidJson() throws IOException {
         try {
-            makePutRequest("not-json");
+            this.makePutRequest("not-json");
             fail("Expected 400 for invalid JSON");
         } catch (ResponseException e) {
             assertEquals(HttpStatus.SC_BAD_REQUEST, e.getResponse().getStatusLine().getStatusCode());
@@ -266,7 +269,7 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
 
     /** Non-existent document ID should result in a response with errors=true (partial failure). */
     public void testUpdateFindings_nonExistentDocument() throws IOException {
-        String index = createFindingsIndex();
+        String index = this.createFindingsIndex();
 
         String body =
                 "{"
@@ -279,11 +282,11 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
                         + "}]"
                         + "}";
 
-        Response response = makePutRequest(body);
+        Response response = this.makePutRequest(body);
         // Bulk response with errors — should be 207 MULTI_STATUS
         assertEquals(207, response.getStatusLine().getStatusCode());
 
-        Map<String, Object> responseBody = entityAsMap(response);
+        Map<String, Object> responseBody = OpenSearchRestTestCase.entityAsMap(response);
         assertTrue((Boolean) responseBody.get("errors"));
     }
 
@@ -299,7 +302,7 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
         sb.append("]}");
 
         try {
-            makePutRequest(sb.toString());
+            this.makePutRequest(sb.toString());
             fail("Expected 400 for exceeding max bulk items");
         } catch (ResponseException e) {
             assertEquals(HttpStatus.SC_BAD_REQUEST, e.getResponse().getStatusLine().getStatusCode());
@@ -312,8 +315,8 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
 
     /** Verify the response contains the expected fields: took, errors, items[]. */
     public void testUpdateFindings_responseStructure() throws IOException {
-        String index = createFindingsIndex();
-        String docId = indexFindingDoc(index);
+        String index = this.createFindingsIndex();
+        String docId = this.indexFindingDoc(index);
 
         String body =
                 "{"
@@ -328,8 +331,8 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
                         + "}]"
                         + "}";
 
-        Response response = makePutRequest(body);
-        Map<String, Object> responseBody = entityAsMap(response);
+        Response response = this.makePutRequest(body);
+        Map<String, Object> responseBody = OpenSearchRestTestCase.entityAsMap(response);
 
         assertTrue("Response should contain 'took'", responseBody.containsKey("took"));
         assertTrue("Response should contain 'errors'", responseBody.containsKey("errors"));
@@ -337,7 +340,7 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
 
         @SuppressWarnings("unchecked")
         List<Map<String, Object>> items = (List<Map<String, Object>>) responseBody.get("items");
-        Map<String, Object> item = items.get(0);
+        Map<String, Object> item = items.getFirst();
         assertTrue("Item should contain '_id'", item.containsKey("_id"));
         assertTrue("Item should contain '_index'", item.containsKey("_index"));
         assertTrue("Item should contain 'status'", item.containsKey("status"));
@@ -350,7 +353,7 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
 
     /** Creates a temporary index with a mapping that includes the wazuh.case fields. */
     private String createFindingsIndex() throws IOException {
-        String index = "test-findings-" + randomAlphaOfLength(5).toLowerCase();
+        String index = "test-findings-" + OpenSearchTestCase.randomAlphaOfLength(5).toLowerCase();
         String mapping =
                 "{"
                         + "\"mappings\": {"
@@ -383,8 +386,8 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
                         + "}"
                         + "}";
 
-        makeRequest(
-                client(),
+        this.makeRequest(
+                OpenSearchRestTestCase.client(),
                 "PUT",
                 index,
                 Collections.emptyMap(),
@@ -404,30 +407,36 @@ public class UpdateFindingsIT extends SecurityAnalyticsRestTestCase {
                         + "}";
 
         Response response =
-                makeRequest(
-                        client(),
+                this.makeRequest(
+                        OpenSearchRestTestCase.client(),
                         "POST",
                         index + "/_doc?refresh=true",
                         Collections.emptyMap(),
                         new StringEntity(doc),
                         new BasicHeader("Content-Type", CONTENT_TYPE));
         assertEquals(HttpStatus.SC_CREATED, response.getStatusLine().getStatusCode());
-        return entityAsMap(response).get("_id").toString();
+        return OpenSearchRestTestCase.entityAsMap(response).get("_id").toString();
     }
 
     /** Fetches a document's _source by index and id. */
     private Map<String, Object> getDocSource(String index, String docId) throws IOException {
         Response response =
-                makeRequest(client(), "GET", index + "/_doc/" + docId, Collections.emptyMap(), null);
+                this.makeRequest(
+                        OpenSearchRestTestCase.client(),
+                        "GET",
+                        index + "/_doc/" + docId,
+                        Collections.emptyMap(),
+                        null);
         @SuppressWarnings("unchecked")
-        Map<String, Object> source = (Map<String, Object>) entityAsMap(response).get("_source");
+        Map<String, Object> source =
+                (Map<String, Object>) OpenSearchRestTestCase.entityAsMap(response).get("_source");
         return source;
     }
 
     /** Sends a PUT request to the update findings endpoint. */
     private Response makePutRequest(String body) throws IOException {
-        return makeRequest(
-                client(),
+        return this.makeRequest(
+                OpenSearchRestTestCase.client(),
                 "PUT",
                 UPDATE_URI,
                 Collections.emptyMap(),
